[package]
authors = ["Quan Tran <quan@shousio.com>"]
categories = ["development-tools"]
description = "Compiler Interrupts API for Rust"
edition = "2018"
homepage = "https://github.com/bitslab/compiler-interrupts-rs"
keywords = ["interrupt", "llvm-ir"]
license = "MIT"
name = "compiler-interrupts"
readme = "README.md"
repository = "https://github.com/bitslab/compiler-interrupts-rs"
version = "1.0.1"

[dev-dependencies]
anyhow = "1.0"
nanorand = "0.6"
nix = "0.22"
